<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".presentacion.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginRight="35dp"
                    android:background="@drawable/logo"
                    android:contentDescription="@string/logo" />

                <TextView
                    android:id="@+id/txt_empresa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/nombre_empresa"
                    android:textColor="@color/colorPrimary"
                    android:textSize="36sp" />

                <TextView
                    android:id="@+id/txt_reclamo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/txt_reclamo"
                    android:textAlignment="center"
                    android:textColor="#9c9c9c"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_iniciarSesion"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="60dp"
                    android:background="@drawable/boton_iniciosesion"
                    android:fontFamily="@font/poppins_medium"
                    android:onClick="SignIn"
                    android:text="@string/btn_iniciarSesion"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_registro"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="60dp"
                    android:background="@drawable/boton_registro"
                    android:fontFamily="@font/poppins_medium"
                    android:onClick="SignUp"
                    android:shadowColor="#040404"
                    android:text="@string/btn_registro"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

            </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>