<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single"
      >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/hogar"
            android:fontFamily="@font/poppins_medium"
            android:textSize="22dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:fontFamily="@font/poppins_medium"
            android:textSize="22dp"
            android:icon="@drawable/usuario"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_pays"
            android:fontFamily="@font/poppins_medium"
            android:textSize="22dp"
            android:icon="@drawable/creditcard"
            android:title="@string/menu_pago" />
    </group>
    <group
        android:id="@+id/secundario"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_asistencia"
            android:fontFamily="@font/poppins_medium"
            android:textSize="22dp"
            android:icon="@drawable/apoyar"
            android:title="Asistencia" />
        <item
            android:id="@+id/nav_ayuda"
            android:fontFamily="@font/poppins_medium"
            android:textSize="22dp"
            android:icon="@drawable/informacion_menu"
            android:title="Ayuda" />
        <item
            android:id="@+id/nav_slideshow"
            android:fontFamily="@font/poppins_medium"
            android:textSize="22dp"
            android:icon="@drawable/salir"
            android:title="@string/menu_cerrarSesion" />
    </group>

</menu>