<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView

            android:id="@+id/imagenPerfil"
            android:layout_width="126dp"
            android:layout_height="122dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/example_img" />

        <TextView

            android:layout_width="117dp"
            android:layout_height="38dp"
            android:layout_marginTop="10dp"
            android:text="Abby Sandel"
            android:textSize="20dp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="294dp"
        android:layout_height="68dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="-25dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/bg_button_rounded"
        android:onClick="volverHome">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="7dp"
            android:background="@drawable/bg_circle"
            android:padding="6dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_back" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/back_to_home"
            android:textSize="18dp" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.6"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"

                android:src="@drawable/ic_profile" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username_title"
                    android:textColor="@android:color/black" />

                <EditText

                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="abby_sandel"
                    android:textColorHint="@android:color/black" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:foregroundTint="#2196F3"
                android:padding="4dp"
                android:src="@drawable/ic_phone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_title"
                    android:textColor="@android:color/black" />

                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="+000 00 000 000"
                    android:textColorHint="@android:color/black" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:padding="4dp"
                android:src="@drawable/ic_email" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_title"
                    android:textColor="@android:color/black" />

                <EditText

                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="goldenperfecttv@gmail.com"
                    android:textColorHint="@android:color/black" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:padding="4dp"
                android:src="@drawable/ic_address" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_title"
                    android:textColor="@android:color/black" />

                <EditText

                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="City, Street"
                    android:textColorHint="@android:color/black" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>